css/map.css
#map_pane {
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  display: flex;
  flex-direction: column;
}
#map_view {
  position: relative;
  order: 1;
  flex: 1 1 0;
  display: flex;
}
#map_tools_pane {
  border-top: 1px solid #1e1e1e;
  width: 100%;
  position: relative;
  overflow: hidden;
  order: 2;
  flex: 0 0 auto;
}
#map_tools_bar {
  height: 20px;
  order: 3;
  flex: 0 0 0;
  border-top: 1px solid #1e1e1e;
}
#map_canvas {
  overflow: hidden;
  flex: 1 1 0;
  cursor: crosshair;
}
.map_tools_pane_label {
  color: #1e1e1e;
  margin: 0;
  padding: 0;
  font-size: 14px;
  font-family: 'Tahoma';
  min-width: 128px;
  display: inline-block;
}
#map_grid_tool_pane {
  background-color: #fafafa;
  width: 100%;
  padding: 5px;
}
#map_scaling_tool_pane {
  background-color: #fafafa;
  width: 100%;
  padding: 5px;
}
#map_filtering_tool_pane {
  background-color: #fafafa;
  width: 100%;
  padding: 5px;
}
#zoom_toolkit {
  cursor: default;
  position: absolute;
  bottom: 0;
  right: 0;
  color: #1e1e1e;
  width: 108px;
  height: 32px;
}
#zoom_factor {
  cursor: default;
  display: inline-block;
  text-align: center;
  min-width: 42px;
}

